--- a/src/admin/edit-user.html
+++ b/src/admin/edit-user.html
@@ -19,7 +19,7 @@
         </form>
     </ux-dialog-body>
     <ux-dialog-footer>
-        <button type="button" class="btn btn-primary" click.delegate="save()">Save</button>
-        <button type="button" class="btn btn-info" click.delegate="cancel()">Cancel</button>
+        <button type="button" class="btn btn-primary" click.trigger="save()">Save</button>
+        <button type="button" class="btn btn-info" click.trigger="cancel()">Cancel</button>
     </ux-dialog-footer>
 </ux-dialog>
