--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -29,17 +29,17 @@
                                 </select>
                             </div>
                             <div class="input-group" if.bind="params.selected_order_option != 'random-order'">
-                                <button t="[title]videos.next" class="btn btn-default" click.delegate="next($event)" disabled.bind="next_disabled"><i class="fas fa-chevron-right"></i></button>
-                                <button t="[title]videos.prev" class="btn btn-default" click.delegate="prev($event)" disabled.bind="prev_disabled"><i class="fas fa-chevron-left"></i></button>
+                                <button t="[title]videos.next" class="btn btn-default" click.trigger="next($event)" disabled.bind="next_disabled"><i class="fas fa-chevron-right"></i></button>
+                                <button t="[title]videos.prev" class="btn btn-default" click.trigger="prev($event)" disabled.bind="prev_disabled"><i class="fas fa-chevron-left"></i></button>
                             </div>
                             <div if.bind="(! got_duplicates) && params.photo_ids.length == 0 && params.selected_order_option == 'random-order'"
                                  class="form-group hide-if-small toolbar" title.bind="with_a_member_text">
-                                <button class="btn btn-${with_a_member ? 'warning' : 'basic'} btn-md btn-framed" click.delegate="select_member($event)">
+                                <button class="btn btn-${with_a_member ? 'warning' : 'basic'} btn-md btn-framed" click.trigger="select_member($event)">
                                     <i class="fa fa-users"></i>
                                 </button>
                             </div>
                             <div if.bind="params.photo_ids.length > 0" class="form-group hide-if-small toolbar toolbar">
-                                <button class="btn btn-basic btn-md btn-framed" click.delegate="show_all_photos($event)">
+                                <button class="btn btn-basic btn-md btn-framed" click.trigger="show_all_photos($event)">
                                     ${'photos.any-photo' & t}
                                 </button>
                             </div>
@@ -57,17 +57,17 @@
                             </div>
                             <div class="form-group toolbar" if.bind="selected_photos.size > 0 && !user.editing">
                                 <button t="[title]photos.download" class="btn btn-basic btn-md btn-framed"
-                                    click.delegate="download_photos()"><i class="fa fa-upload fa-rotate-180 fa-xs"></i></button>
+                                    click.trigger="download_photos()"><i class="fa fa-upload fa-rotate-180 fa-xs"></i></button>
                             </div>
                             <div class="form-group toolbar" if.bind="user.privileges.ADMIN && user.editing && selected_photos.size > 0">
-                                <button t="[title]photos.delete" class="btn btn-warning btn-md btn-framed" click.delegate="delete_selected_photos()"><i class="far fa-trash-alt fa-xs"></i></button>
+                                <button t="[title]photos.delete" class="btn btn-warning btn-md btn-framed" click.trigger="delete_selected_photos()"><i class="far fa-trash-alt fa-xs"></i></button>
                             </div>
                             <div class="form-group toolbar" if.bind="user.privileges.ADMIN && selected_photos.size > 0">
-                                <button t="[title]photos.rotate" class="btn btn-basic btn-md btn-framed" click.delegate="rotate_selected_photos($event)"><i class="fa fa-undo fa-xs"></i></button>
+                                <button t="[title]photos.rotate" class="btn btn-basic btn-md btn-framed" click.trigger="rotate_selected_photos($event)"><i class="fa fa-undo fa-xs"></i></button>
                             </div>
                             <div class="form-group toolbar" if.bind="user.privileges.TESTER">
                                 <button t="[title]photos.set-slideshow-topics" class="btn btn-basic btn-md btn-framed"
-                                        click.delegate="set_slideshow_topics($event)"><i class="fa fa-eye"></i></button>
+                                        click.trigger="set_slideshow_topics($event)"><i class="fa fa-eye"></i></button>
                             </div>
                             <div class="form-group toolbar"
                                 if.bind="user.editing && selected_photos.size > 0 && user.privileges.ADMIN">
@@ -80,12 +80,12 @@
                                 <button class="btn btn-basic btn-sm btn-framed" 
                                     style="margin-right:20px;margin-left:20px;"
                                     if.bind="! theme.is_desktop" 
-                                    click.delegate="show_filters_only()">${'photos.edit-filters' & t}
+                                    click.trigger="show_filters_only()">${'photos.edit-filters' & t}
                                 </button>
                             </div>
                             <div class="form-group toolbar" if.bind="can_pair_photos">
                                 <button t="[title]photos.pair" class="btn btn-basic btn-md btn-framed"
-                                        click.delegate="pair_selected_photos()">
+                                        click.trigger="pair_selected_photos()">
                                     <i class="far fa-yin-yang"></i>
                                 </button>
                             </div>
@@ -158,7 +158,7 @@
                         <div css="width:${photo_size}px;height:${photo_size}px;"
                             class="${photo.photo_id==curr_photo_id ? 'current-photo' : ''}"
                             repeat.for="photo of photo_list | filter : filter : '*selected' : 'name' : 'original_file_name' | take : 9999">
-                            <a style="position:relative;width:100%" click.delegate="maximize_photo(photo, $event, $index)" tapandhold="500" longtouch.delegate="toggle_selection(photo)" 
+                            <a style="position:relative;width:100%" click.trigger="maximize_photo(photo, $event, $index)" tapandhold="500" longtouch.delegate="toggle_selection(photo)" 
                                 class.bind="photo.selected" >
                                 <info css="position:absolute;top:${7 - photo_size / 2}px;left:${photo_size-20}px;"
                                     if.bind="theme.is_desktop"
