--- a/src/audios/upload-audios.html
+++ b/src/audios/upload-audios.html
@@ -31,7 +31,7 @@
                             </div>
                             <div style="padding-left:175px;margin-top:16px;" if.bind="! working">
                                 <button style="margin-left:auto; margin-right:auto;width:150px;"
-                                    click.delegate="cancel()" type="submit" class="btn btn-warning">${'audios.cancel' &
+                                    click.trigger="cancel()" type="submit" class="btn btn-warning">${'audios.cancel' &
                                     t}</button>
                             </div>
                         </form>
