--- a/src/experiments/experiment.html
+++ b/src/experiments/experiment.html
@@ -1,5 +1,5 @@
 <template>
-    <!--button class="btn btn-default" click.delegate="to_show=!to_show">Show/Hide</button>
+    <!--button class="btn btn-default" click.trigger="to_show=!to_show">Show/Hide</button>
     <my-map show.bind="to_show"
             longitude.bind="longitude"
             latitude.bind="latitude"
@@ -9,11 +9,11 @@
     >
     </my-map-->
     <!-- <div style="display:flex">
-        <button class="btn btn-${use_html5 ? 'primary' : 'basic'}" click.delegate="use_html5=true">Html5</button>
-        <button class="btn btn-${use_html5 ? 'basic' : 'primary'}" click.delegate="use_html5=false">Youtube</button>
+        <button class="btn btn-${use_html5 ? 'primary' : 'basic'}" click.trigger="use_html5=true">Html5</button>
+        <button class="btn btn-${use_html5 ? 'basic' : 'primary'}" click.trigger="use_html5=false">Youtube</button>
     </div>
     <div>
-        <button class="btn btn-primary" click.delegate="make_step($event)">Step forward</button>
+        <button class="btn btn-primary" click.trigger="make_step($event)">Step forward</button>
         <progress-bar final.bind="final" current.bind="current"></progress-bar>
     </div>
     <div style="width: 600px;margin-right:auto;margin-left:auto" if.bind="false && ! use_html5">
