--- a/src/groups/groups-manager.html
+++ b/src/groups/groups-manager.html
@@ -7,7 +7,7 @@
         <div style="height:730px;width:800px;overflow:auto;">
             <div class="form-inline" style="margin-bottom:10px;">
                 <div class="form-group">
-                    <a href class="btn btn-success" click.delegate="add_or_update_group(null)">
+                    <a href class="btn btn-success" click.trigger="add_or_update_group(null)">
                         ${'groups.add-group' & t}
                     </a>
                 </div>
@@ -59,22 +59,22 @@
                             </form>
                         </td>
                         <td class="center">
-                            <a href click.delegate="add_or_update_group(item)">
+                            <a href click.trigger="add_or_update_group(item)">
                                 <i class="fas fa-pencil" title="Edit group Data"></i>
                             </a>
                         </td>
                         <td class="center">
-                            <a href title="Delete" click.delegate="delete_group(item)">
+                            <a href title="Delete" click.trigger="delete_group(item)">
                                 <i class="far fa-trash"></i>
                             </a>
                         </td>
                         <td class="center">
-                            <a href title="Copy link" click.delegate="copy_link(item)">
+                            <a href title="Copy link" click.trigger="copy_link(item)">
                                 <i class="far fa-link"></i>
                             </a>
                         </td>
                         <td class="center">
-                            <a href title="show contacts" click.delegate="expose_contacts(item)">
+                            <a href title="show contacts" click.trigger="expose_contacts(item)">
                                 <i class="far fa-address-book"></i>
                             </a>
                         </td>
@@ -105,16 +105,16 @@
             </div>
         </div>
         <div style="width:300px;height:80vh;margin-left:12px;background-color:lightblue;" if.bind="curr_group_id">
-            <!-- <button type="button" class="btn btn-${mail_sent ? 'success' : 'primary'} ${params.mail_body && ! mail_sent ? '' : 'disabled'}" click.delegate="mail_contacts()"
+            <!-- <button type="button" class="btn btn-${mail_sent ? 'success' : 'primary'} ${params.mail_body && ! mail_sent ? '' : 'disabled'}" click.trigger="mail_contacts()"
                 aubs-tooltip="text.bind:need_to_show;position:top;disabled.bind:params.mail_body;"
                 style="width:100%;">${mail_contacts_caption}</button> -->
             <div class="form-inline" style="display:flex;justify-content:space-between;padding: 8px;">
                 <div class="form-group">
-                    <button class="btn btn-success" click.delegate="add_or_update_contact(null)"
+                    <button class="btn btn-success" click.trigger="add_or_update_contact(null)"
                         style="margin-bottom:1em;margin-left:4px;margin-right:4px;">
                         ${'groups.add-contact' & t}
                     </button>
-                    <button if.bind="csv_list.length>0" class="btn btn-primary" click.delegate="upload_contacts(null)"
+                    <button if.bind="csv_list.length>0" class="btn btn-primary" click.trigger="upload_contacts(null)"
                         style="margin-bottom:1em;">
                         ${'groups.upload-now' & t}
                     </button>
@@ -140,8 +140,8 @@
                     <span>
                         ${contact.first_name} ${contact.last_name}
                         <i class="fa fa-pencil" style="cursor:pointer;"
-                            click.delegate="add_or_update_contact(contact)"></i>
-                        <i class="fa fa-trash" style="cursor:pointer;" click.delegate="remove_contact(contact)"></i>
+                            click.trigger="add_or_update_contact(contact)"></i>
+                        <i class="fa fa-trash" style="cursor:pointer;" click.trigger="remove_contact(contact)"></i>
                     </span>
                 </li>
 
