--- a/src/my-app.html
+++ b/src/my-app.html
@@ -40,7 +40,7 @@
                             </datalist>
                             <i class="far fa-times" click.trigger="clear_keywords()"></i>
                     </label>
-                    <button class="search-box-button" click.delegate="go_search_btn()">
+                    <button class="search-box-button" click.trigger="go_search_btn()">
                         <i class="far fa-search"></i>
                     </button>
                 </div>
@@ -56,33 +56,33 @@
             </div>
         </div>
         <div id="router-view" css="min-height:${router_view_height};overflow-x:hidden;" class="unselectable">
-            <router-view ref="theme.router_view"></router-view>
+            <au-viewport ref="theme.router_view"></au-viewport>
         </div>
-        <footer id="footer" if.bind="! theme.hide_title" ref="theme.footer">
+        <footer id="footer" if.bind="!theme.hide_title" ref="theme.footer">
             <div class="footer-area" style="font-size:120%;font-weight:bold;">
                 <span if.bind="user.config.expose_new_app_button" class="footer-item">
-                    <button class="btn btn-default footer-button" click.delegate="create_new_app()">
+                    <button class="btn btn-default footer-button" click.trigger="create_new_app()">
                         ${'user.create-new-app' & t}
                     </button>
                 </span>
                 <span if.bind="user.config.expose_developer" class="footer-item">
-                    <button class="btn btn-default footer-button" click.delegate="contact_us()">
+                    <button class="btn btn-default footer-button" click.trigger="contact_us()">
                         Built by LifeStone
                     </button>
                 </span>
                 <span if.bind="user.config.expose_version_time" style="direction:ltr" class="footer-item">${curr_version}</span>
                 <span if.bind="user.config.expose_feedback_button" class="footer-item">
-                    <button class="btn btn-default footer-button" click.delegate="feedback()">
+                    <button class="btn btn-default footer-button" click.trigger="feedback()">
                         ${'feedback.feedback' & t}
                     </button>
                 </span>
                 <span if.bind="user.config.quick_upload_button" class="footer-item">
-                    <button class="btn btn-default footer-button" click.delegate="quick_upload_photo()">
+                    <button class="btn btn-default footer-button" click.trigger="quick_upload_photo()">
                         ${'user.quick-upload-photo' & t}
                     </button>
                 </span>
                 <span if.bind="user.config.expose_gallery" class="footer-item">
-                    <button class="btn btn-default footer-button" click.delegate="show_gallery()">
+                    <button class="btn btn-default footer-button" click.trigger="show_gallery()">
                         ${'gallery.gallery' & t}
                     </button>
                 </span>
