--- a/src/resources/elements/help.html
+++ b/src/resources/elements/help.html
@@ -1,5 +1,5 @@
 <button style="border-radius:50%;width:22px;margin:4px;" class="btn btn-info btn-xs" 
-    click.delegate="edit_help_message($event)"
+    click.trigger="edit_help_message($event)"
     aubs-popover="custom-popover.bind: customPopover;position.bind: position;" >
     <i class="fa fa-${icon}"></i>
 </button>
