--- a/src/resources/elements/multi-select/edit-topic.html
+++ b/src/resources/elements/multi-select/edit-topic.html
@@ -16,7 +16,7 @@
                     <span class="error" if.bind="error_message">${error_message}</span>
                 </div>
                 <div class="form-group" if.bind="can_delete">
-                    <button class="btn btn-warning" click.delegate="remove_topic()">
+                    <button class="btn btn-warning" click.trigger="remove_topic()">
                         <i class="fa fa-trash"></i>
                         ${'multi-select.remove-item' & t} "${topic.name}"
                     </button>
@@ -26,8 +26,8 @@
         <ux-dialog-footer>
             <button type="button" class="btn btn-primary"
                 disabled="${ready_to_save ? '' : 'disabled'}"
-                click.delegate="save()">${'groups.save' & t}</button>
-            <button type="button" class="btn btn-info" click.delegate="cancel()">${'groups.cancel' & t}</button>
+                click.trigger="save()">${'groups.save' & t}</button>
+            <button type="button" class="btn btn-info" click.trigger="cancel()">${'groups.cancel' & t}</button>
         </ux-dialog-footer>
     </ux-dialog>
 </template>
