--- a/src/resources/elements/multi-select/multi-select.html
+++ b/src/resources/elements/multi-select/multi-select.html
@@ -4,7 +4,7 @@
             help_topic.bind="settings.help_topic" filter-change.delegate="enter_word($event)"></search-input>
     </div>
     <button if.bind="can_add" class="btn btn-success btn-sm cl-create-btn"
-        click.delegate="dispatch_new_item_event($event)" style="width:88%;font-size:110%;">
+        click.trigger="dispatch_new_item_event($event)" style="width:88%;font-size:110%;">
         ${'multi-select.add-item' & t} ${filter}
     </button>
     <div class="ms-container">
@@ -21,19 +21,19 @@
                         <div style="display:flex;flex-direction:row-reverse;align-items:center;">
                             <i class="far fa-${item.group_number==open_group ? 'lock-open-alt' : 'lock-alt'} tool"
                                 if.bind="user.advanced_user && settings.can_group && item.first" t="[title]multi-select.lock-unlock"
-                                click.delegate="toggle_group(item.group_number)">
+                                click.trigger="toggle_group(item.group_number)">
                             </i>
                             <i class="far fa-${item.option.sign}-square fa-rotate-180 tool"
                                 if.bind="user.advanced_user && settings.can_set_sign && item.first" t="[title]multi-select.change-sign"
-                                click.delegate="toggle_sign(item.option, $event)">
+                                click.trigger="toggle_sign(item.option, $event)">
                             </i>
                             <i class="far fa-times-circle tool ${highlight_unselectors}" t="[title]multi-select.unselect"
                                 css="margin-left:${on_off_button_margin(item.first)}px"
-                                click.delegate="unselect_item(item, $index)">
+                                click.trigger="unselect_item(item, $index)">
                             </i>
                             <i class="user.advanced_user && far fa-exchange-alt tool" t="[title]multi-select.change-group"
                                 show.bind="item.moveable" 
-                                click.delegate="move_item(item, $index)">
+                                click.trigger="move_item(item, $index)">
                             </i>
                         </div>
                         <span if.bind="! item.editing" style="height:24px;padding-right:5px;"  contextmenu.delegate="edit_option_dialog(item.option, $event)"
@@ -50,7 +50,7 @@
             if.bind="options && options.length > 0 && (filter.length > 0 || (! settings.show_only_if_filter)) ">
             <ul css="width:${width}px;" if.bind="true || unselected_options===[]">
                 <li if.bind="can_show_untagged" class="${to_show_untagged ? 'active' : 'ready'} untag-button"
-                    click.delegate="show_untagged()">${show_untagged_caption}
+                    click.trigger="show_untagged()">${show_untagged_caption}
                 </li>
                 <li
                     repeat.for="option of options | filter: filter : 'name' | filterBySet : selected_options_set : 'exclude' : 'name' | take : 999 | spy : agent">
@@ -59,11 +59,11 @@
                         aubs-popover="body.bind:option.description;position:right;disabled.bind:!option.description"
                         css="margin:0;padding:0;padding-right:${(option.level || 0) * 16 + 2}px;width:${inner_width}px"
                         if.bind="option.topic_kind > 0 || user.editing">
-                        <i if.bind="option.topic_kind==1 && ! option.expanded" click.delegate="expand(option)"
+                        <i if.bind="option.topic_kind==1 && ! option.expanded" click.trigger="expand(option)"
                             class="fa fa-play fa-xs fa-rotate-90"></i>
-                        <i if.bind="option.topic_kind==1 && option.expanded" click.delegate="collapse(option)"
+                        <i if.bind="option.topic_kind==1 && option.expanded" click.trigger="collapse(option)"
                             class="fa fa-play fa-xs fa-rotate-180"></i>
-                        <a click.delegate="select_option(option)"
+                        <a click.trigger="select_option(option)"
                             class.bind="'option-kind-' + option.topic_kind">${option.name}</a>
                     </div>
                 </li>
