--- a/src/resources/elements/photo-strip.html
+++ b/src/resources/elements/photo-strip.html
@@ -1,13 +1,13 @@
 <div id="slide-list" class="row slide-list" css="height: ${height}px;" element.ref="slideList"
 interact-draggable.bind="theme.interact_setting" interact-dragmove.delegate="drag_photos($event)"
 interact-dragstart.delegate="on_drag_start($event)" interact-dragend.delegate="on_drag_end($event)"
-click.delegate="dragging = false">
+click.trigger="dragging = false">
 <img repeat.for="slide of slides" draggable="false" id="img-${slide.photo_id}" src="${slide.src}" height="${height}"
-    aubs-tooltip="text.bind:slide.title" click.delegate="on_click($event, slide)"
+    aubs-tooltip="text.bind:slide.title" click.trigger="on_click($event, slide)"
      class="${slide.video_id ? 'video' : ''}"
     />
 </div>
-<div class="slide-control prev" style="top:87%;left:6px;" click.delegate="goto_photo_table()" t="[title]photos.show-in-photo-page" >
+<div class="slide-control prev" style="top:87%;left:6px;" click.trigger="goto_photo_table()" t="[title]photos.show-in-photo-page" >
 <i class="fas fa-table" style="font-size:1.3em;color:yellow;"></i>
 </div>
 <help topic.bind="photo-strip" position="right"></help>
