--- a/src/resources/elements/quiz/edit-question.html
+++ b/src/resources/elements/quiz/edit-question.html
@@ -15,12 +15,12 @@
                 </div>
                 <div style="display:flex;flex-direction: row;" >
                     <button type="button" style="margin-left:3px;"
-                        click.delegate="toggle_nota_default(true)"
+                        click.trigger="toggle_nota_default(true)"
                         class="form-control ${question.nota_default ? 'btn btn-primary' : 'btn btn-info'}">
                         ${'quiz.none-of-the-above-default' & t}
                     </button>
                     <button style="margin-right:3px;" 
-                        click.delegate="toggle_nota_default(false)"
+                        click.trigger="toggle_nota_default(false)"
                         class="form-control ${! question.nota_default ? 'btn btn-primary' : 'btn btn-info'}">
                         ${'quiz.no-default' & t}
                     </button>
@@ -28,10 +28,10 @@
             </form>
         </ux-dialog-body>
         <ux-dialog-footer>
-            <button type="button" class="btn btn-primary ${disabled_if}" click.delegate="save()">
+            <button type="button" class="btn btn-primary ${disabled_if}" click.trigger="save()">
                 ${'members.save' & t}
              </button>
-            <button type="button" if.bind="!done" class="btn btn-info" click.delegate="cancel()">
+            <button type="button" if.bind="!done" class="btn btn-info" click.trigger="cancel()">
                 ${'members.cancel' & t}
             </button>
         </ux-dialog-footer>
