--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -74,7 +74,7 @@
                         style="width:90%;margin-right:auto;margin-left:auto;">
                     </h3>
                     <button class="btn btn-basic btn-sm btn-framed" if.bind="! theme.is_desktop"
-                        click.delegate="show_filters_only()"
+                        click.trigger="show_filters_only()"
                         style="margin-bottom:12px;margin-right:20px">${'stories.edit-filters' & t}
                     </button>
 
@@ -82,11 +82,11 @@
                         <span if.bind="params.selected_book" style="font-size:120%;font-weight:bolder;">${params.selected_book.name}: </span>
                         <button repeat.for="uf of active_result_types"
                             class="btn btn-${uf==used_for ? 'primary' : 'default'}"
-                            click.delegate="select_used_for(uf)">
+                            click.trigger="select_used_for(uf)">
                             <span style="font-size:70%;">${result_type_counters[uf]}</span>&nbsp;&nbsp;<span
                                 style="font-weight:bolder">${'result' + uf & t}</span>
                         </button>
-                        <button if.bind="used_for==3" class="btn btn-basic" click.delegate="goto_photos_page()">
+                        <button if.bind="used_for==3" class="btn btn-basic" click.trigger="goto_photos_page()">
                             ${'photos.show-in-photo-page' & t}
                         </button>
                     </form>
@@ -95,7 +95,7 @@
                         <li repeat.for="story of story_list | filter: filter : '*selected' : 'name' : 'author' | take : 9999"
                             dir="${theme.rtltr}" if.bind="story.used_for==used_for"
                             style="float:right;border-bottom:2px solid lightgray;padding-bottom:20px;position:relative;width:100%;margin-bottom:16px;">
-                            <div class="outer-story-preview" click.delegate="jump_to_the_full_story($event, story)">
+                            <div class="outer-story-preview" click.trigger="jump_to_the_full_story($event, story)">
                                 <!--<div style="margin-bottom: 10px;" aubs-tooltip="text.bind:story.topics">-->
                                 <div class="story-preview" style="margin-bottom: 10px;" if.bind="used_for!=18">
                                     <div>
@@ -124,7 +124,7 @@
                 </div>
                 <div class="col-md-4 col-sm-12" if.bind="theme.is_desktop || editing_filters" id="story-filters"
                     css="height:${panel_height}px;overflow:auto;">
-                    <button class="btn btn-basic btn-framed" click.delegate="init_params(true)"
+                    <button class="btn btn-basic btn-framed" click.trigger="init_params(true)"
                         if.bind="is_filtered"
                         style="margin-right:-16px;margin-left:-16px;">
                         ${'stories.clear-all-filters' & t}
