--- a/src/terms/terms.html
+++ b/src/terms/terms.html
@@ -49,7 +49,7 @@
                     <div class="row" if.bind="! editing_filters">
                         <button class="btn btn-basic btn-sm btn-framed" 
                             if.bind="! theme.is_desktop" 
-                            click.delegate="show_filters_only()"
+                            click.trigger="show_filters_only()"
                             style="margin-bottom:12px">${'terms.edit-filters' & t}
                         </button>
                         <h3 if.bind="empty" innerhtml.bind="'no-results' & t">
@@ -58,7 +58,7 @@
                             ref="scroll_area" class="unselectable">
                             <li repeat.for="term of term_list | filter: filter : 'Name' : 'author'" dir="rtl"
                                 style="float:right;border-bottom:2px solid lightgray;padding-bottom:20px;position:relative;width:100%;cursor:pointer;"
-                                click.delegate="jump_to_the_full_story($event, term)">
+                                click.trigger="jump_to_the_full_story($event, term)">
                                 <div style="height:120px;overflow:hidden;" class="story-preview">
                                     <div style="margin-bottom: 10px;padding-right:0px;">
                                         <editable
