--- a/src/user/make_qrcode.html
+++ b/src/user/make_qrcode.html
@@ -16,7 +16,7 @@
     <ux-dialog-footer>
         <button type="button" class="btn btn-primary"
             disabled="${ready_to_save ? '' : 'disabled'}"
-            click.delegate="save()">${'groups.save' & t}</button>
-        <button type="button" class="btn btn-info" click.delegate="cancel()">${'groups.cancel' & t}</button>
+            click.trigger="save()">${'groups.save' & t}</button>
+        <button type="button" class="btn btn-info" click.trigger="cancel()">${'groups.cancel' & t}</button>
     </ux-dialog-footer>
 </ux-dialog>
