--- a/src/videos/videos.html
+++ b/src/videos/videos.html
@@ -7,7 +7,7 @@
                         <div class="col-md-12 ctrls-group">
                             <button class="btn btn-basic btn-sm btn-framed"
                                     if.bind="! theme.is_desktop"
-                                    click.delegate="show_filters_only()"
+                                    click.trigger="show_filters_only()"
                                     css="margin-${theme.other_dir}:6px;margin-${theme.same_dir}:-16px;">
                                 ${'videos.edit-filters' & t}
                             </button>
@@ -16,7 +16,7 @@
                                               height="30"></search-input>
                             </div>
                             <div if.bind="phase=='photos-ready-to-edit'" class="ctrl">
-                                <button click.delegate="new_video()" class="btn btn-success cl-create-btn"
+                                <button click.trigger="new_video()" class="btn btn-success cl-create-btn"
                                         style="height:32px;margin-right:4px;">
                                     <i class="far fa-plus-square"></i>
                                     ${'videos.new' & t}
@@ -35,7 +35,7 @@
                                 <button
                                         class="btn btn-warning btn-md"
                                         click.trigger="delete_videos()">
-                                        <i class="fas fa-trash-alt" click.delegate="delete_video(video)"></i>
+                                        <i class="fas fa-trash-alt" click.trigger="delete_video(video)"></i>
                                     <!--span>${'videos.delete-selected-videos' & t}</span-->
                                 </button>
                             </div>
@@ -75,7 +75,7 @@
                                 class="fr-video fr-fvc fr-draggable fr-dvi"
                                 contenteditable="false" draggable="true">
                                 <div style="margin:0px 6px 6px;cursor:pointer;width:257px;overflow:hidden;">
-                                    <img src.bind="video.thumbnail_url" width="257" click.delegate="view_video(video, $event)"/>
+                                    <img src.bind="video.thumbnail_url" width="257" click.trigger="view_video(video, $event)"/>
                                     <span class="video-name" style="margin-top:-6px;">
                                         <span>
                                             <info title.bind="video_info_title(video)"
@@ -83,8 +83,8 @@
                                         </span>
                                         <span if.bind="user.editing">
                                             <i class="fa${video.selected ? 's' : 'r'} fa-circle"
-                                               click.delegate="toggle_selection(video, $event, $index)"></i>
-                                            <i class="fas fa-pencil" click.delegate="edit_video_info(video)"></i>
+                                               click.trigger="toggle_selection(video, $event, $index)"></i>
+                                            <i class="fas fa-pencil" click.trigger="edit_video_info(video)"></i>
                                         </span>
                                         <span>
                                             ${video.name}
